--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,23 +4,46 @@
     the level of depression
     among University of Phayao students. The research author is Miss Sirikamon Chankul and the research advisor is
     Mr.Nutdanai. Hope you enjoy our page.</p>
+  <br>
+  <mat-divider></mat-divider>
+  <mat-grid-list cols="2">
+    <mat-grid-tile class="grid">
+      <div class="image">
 
-  <div class="container">
-    <div class="image">
-      <img class="card-img-top img-responsive" src="https://ict.up.ac.th/web/images/personal/natthapongk.jpg"
-        class="fit" alt="Teacher">
-    </div>
-    <div class="text">
-      <h4><b>Mr. Natdanai Khamkad</b></h4>
-      <p>faculty member & Research Advisor</p>
-      <a href="https://www.scopus.com/authid/detail.uri?authorId=57216207659" class="btn btn-primary">Ocopus</a>
-    </div>
- 
-    
-  </div>
-  <br>
-  <br>
+        <img class="card-img-top img-responsive" src="https://ict.up.ac.th/web/images/personal/natthapongk.jpg"
+          class="fit" alt="Teacher">
+      </div>
+      <div class="text">
+        <h4><b>Mr. Natdanai Khamkad</b></h4>
+        <p>faculty member & Research Advisor</p>
+        <a href="https://www.scopus.com/authid/detail.uri?authorId=57216207659" class="btn btn-primary">Ocopus</a>
+      </div>
+
+    </mat-grid-tile>
+
+    <mat-grid-tile class="grid1">
+      <div class="image">
+
+        <img class="card-img-top img-responsive" src="https://ict.up.ac.th/web/images/personal/rathasak.jpg" class="fit"
+          alt="Teacher">
+      </div>
+      <div class="text">
+        <h4><b>Mr. Rattasak Pengchata</b></h4>
+        <p>faculty member </p>
+        <a href="https://www.scopus.com/authid/detail.uri?authorId=57302561700" class="btn btn-primary">Ocopus</a>
+      </div>
+    </mat-grid-tile>
+  </mat-grid-list>
+
+
+
+
+
+
 </div>
+<br>
+<br>
+
 
 
 
