--- a/src/app/score-result/score-result.component.html
+++ b/src/app/score-result/score-result.component.html
@@ -1,6 +1,6 @@
 <mat-card style="top:20px">
   <mat-card-header>
-    <mat-card-title style=" font-size: 200%;font-weight: bold;">Total score
+    <mat-card-title style=" font-size: 200%;font-weight: bold;">คะแนน
     </mat-card-title>
 
   </mat-card-header>
